[package]
name = "ianaio-prime"
version = "0.1.0"
description = "This page demonstrates how to calculate prime in a web worker"
authors = ["Jaroslaw Cichon <dev.iana.io> IanaIO Rust and WebAssembly Working Group"]
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/ianaio/ianaio-prime"
homepage = "https://rustwasm.iana.io/examples/ianaio-prime"
documentation = "https://docs.rs/ianaio-prime/latest/ianaio-prime"
categories = ["wasm", "prime-calculator", "example", "ianaio"]
publish = true
rust-version = "1.80"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
ianaio = { version = "0.1.0", path = "../..", features = ["futures"] }
primes = "0.3.0"
wasm-bindgen-futures = "0.4.33"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.147", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

